GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha17 :
    
        - Fixed problem with accented chars in title, filename
          or options and LDAP backend.
          
    - 1.20alpha16 :
    
        - Internal handling of socket based PJL queries over
          port tcp/9100 is now available with the magic
          'pjl' value in the hardware accounter.
          
    - 1.20alpha15 :
    
        - LDAP pykotaAccountBalance objects were always created
          attached to the pykotaUser objects. This is now
          fixed and the value of balancebase in pykota.conf
          is now correctly used.
          
    - 1.20alpha14 :
    
        - Belgian translations added (copy of the french ones).
        
        - External hardware accounter now loops until
          a result can be read correctly.
          
        - pkhint now suggest the internal snmp handling instead
          of the external one.
          
    - 1.20alpha13 :
     
        - Hardware accounter now accepts the special
          'snmp' value, meaning ALL is done from main code
          without launching any subprocess.
          You need the http://pysnmp.sf.net Python module
          for this to work (tested with v3.4.2)
          
        - Increased delay between two loops iterations  
          to 2 seconds in waitprinter.sh to diminish
          CPU load.
          
    - 1.20alpha12 :
    
        - waitprinter.sh rewritten from scratch to wait
          for printer status stabilization.
        
    - 1.20alpha11 : 
    
        - Generic data dumper 'dumpykota' introduced.
          Works only with PostgreSQL backend for now.
          
    - 1.20alpha10 :
    