@@ -1,9 +1,9 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.33.
 .TH EDPYKOTA "1" "September 2004" "C@LL - Conseil Internet & Logiciels Libres" "User Commands"
 .SH NAME
-edpykota \- manual page for edpykota 1.20alpha12_unofficial
+edpykota \- manual page for edpykota 1.20alpha17_unofficial
 .SH DESCRIPTION
-edpykota v1.20alpha12_unofficial (c) 2003-2004 C@LL - Conseil Internet & Logiciels Libres
+edpykota v1.20alpha17_unofficial (c) 2003-2004 C@LL - Conseil Internet & Logiciels Libres
 A Print Quota editor for PyKota.
 .PP
 command line usage :
@@ -72,9 +72,14 @@ print quotas
 Doesn't set a quota but only does accounting.
 .TP
 \fB\-r\fR | \fB\-\-reset\fR
-Resets the printed page counter for the user
-or group to zero. The life time page counter
-is kept unchanged.
+Resets the actual page counter for the user
+or group to zero on the specified printers.
+The life time page counter is kept unchanged.
+.TP
+\fB\-R\fR | \fB\-\-hardreset\fR
+Resets the actual and life time page counters
+for the user or group to zero on the specified
+printers.
 .TP
 \fB\-l\fR | \fB\-\-limitby\fR l
 Choose if the user/group is limited in printing
@@ -136,6 +141,8 @@ to 550 pages for groups financial and support on all printers.
 This will reset jerome's page counter to zero on all printers, as
 well as every user whose name begins with 'jo'.
 Their life time page counter on each printer will be kept unchanged.
+You can also reset the life time page counters by using the
+\fB\-\-hardreset\fR | \fB\-R\fR command line option.
 .IP
 \f(CW$ edpykota --printer hpcolor --noquota jerome\fR
 .IP
